--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -30,10 +30,14 @@ spec:
                       oneOf:
                         - required:
                             - multiUser
+                        - required:
+                            - authenticationClass
                       properties:
+                        authenticationClass:
+                          type: string
                         multiUser:
                           properties:
-                            userCredentialsSecret:
+                            user_credentials_secret:
                               description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
                               properties:
                                 name:
@@ -44,7 +48,7 @@ spec:
                                   type: string
                               type: object
                           required:
-                            - userCredentialsSecret
+                            - user_credentials_secret
                           type: object
                       type: object
                   required:
