--- a/examples/simple-trino-cluster-ldap.yaml
+++ b/examples/simple-trino-cluster-ldap.yaml
@@ -47,7 +47,8 @@ spec:
   config:
   authentication:
     method:
-      authenticationClass: ldap-with-tls
+      ldap:
+        authenticationClass: ldap-with-tls
   coordinators:
     roleGroups:
       default:
