--- a/deploy/crd/trinocluster.crd.yaml
+++ b/deploy/crd/trinocluster.crd.yaml
@@ -33,7 +33,7 @@ spec:
                       - ldap
                     properties:
                       ldap:
-                        description: Other authentication methods like LDAP
+                        description: LDAP based PASSWORD authentication
                         properties:
                           authenticationClass:
                             type: string
@@ -41,7 +41,7 @@ spec:
                         - authenticationClass
                         type: object
                       multiUser:
-                        description: Set multiple users via the password file from a secret
+                        description: File based PASSWORD authentication via user:password combinations from a secret
                         properties:
                           userCredentialsSecret:
                             description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
