--- a/deploy/manifests/roles.yaml
+++ b/deploy/manifests/roles.yaml
@@ -117,3 +117,11 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - authentication.stackable.tech
+    resources:
+      - authenticationclasses
+    verbs:
+      - get
+      - list
+      - watch
