Support LDAP authentication (#306)
# Description

- added LDAP authentication for Trino
- upgraded operator-rs

fixes https://github.com/stackabletech/trino-operator/issues/38

test: https://ci.stackable.tech/job/trino-operator-it-nightly/93/

Should https://github.com/stackabletech/trino-operator/issues/307 be done here as well?



Co-authored-by: Malte Sander <malte.sander.it@gmail.com>
Co-authored-by: maltesander <malte.sander.it@gmail.com>

--- a/deploy/manifests/crds.yaml
+++ b/deploy/manifests/crds.yaml
@@ -31,8 +31,19 @@ spec:
                       oneOf:
                         - required:
                             - multiUser
+                        - required:
+                            - ldap
                       properties:
+                        ldap:
+                          description: LDAP based PASSWORD authentication
+                          properties:
+                            authenticationClass:
+                              type: string
+                          required:
+                            - authenticationClass
+                          type: object
                         multiUser:
+                          description: File based PASSWORD authentication via user:password combinations from a secret
                           properties:
                             userCredentialsSecret:
                               description: SecretReference represents a Secret Reference. It has enough information to retrieve secret in any namespace
