--- a/deploy/helm/trino-operator/configs/properties.yaml
+++ b/deploy/helm/trino-operator/configs/properties.yaml
@@ -177,6 +177,7 @@ properties:
         type: "string"
       allowedValues:
         - "file"
+        - "ldap"
       roles:
         - name: "coordinator"
           required: false
