--- a/deploy/manifests/deployment.yaml
+++ b/deploy/manifests/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: trino-operator
     app.kubernetes.io/instance: trino-operator
-    app.kubernetes.io/version: "0.8.0-nightly"
+    app.kubernetes.io/version: "0.8.0"
 spec:
   replicas: 1
   strategy:
@@ -26,7 +26,7 @@ spec:
       containers:
         - name: trino-operator
           securityContext: {}
-          image: "docker.stackable.tech/stackable/trino-operator:0.8.0-nightly"
+          image: "docker.stackable.tech/stackable/trino-operator:0.8.0"
           imagePullPolicy: IfNotPresent
           resources: {}
           volumeMounts:
