--- a/deploy/crd/trinocatalog.crd.yaml
+++ b/deploy/crd/trinocatalog.crd.yaml
@@ -29,6 +29,8 @@ spec:
               connector:
                 oneOf:
                 - required:
+                  - googleSheet
+                - required:
                   - hive
                 - required:
                   - iceberg
@@ -37,6 +39,31 @@ spec:
                 - required:
                   - tpch
                 properties:
+                  googleSheet:
+                    properties:
+                      cache:
+                        description: Cache the contents of sheets. This is used to reduce Google Sheets API usage and latency.
+                        nullable: true
+                        properties:
+                          sheetsDataExpireAfterWrite:
+                            description: How long to cache spreadsheet data or metadata, defaults to `5m`
+                            nullable: true
+                            type: string
+                          sheetsDataMaxCacheSize:
+                            description: Maximum number of spreadsheets to cache, defaults to `1000`
+                            nullable: true
+                            type: string
+                        type: object
+                      credentialsSecret:
+                        description: Name of the secret containing the Google API JSON key file. The key used from the Secret is `credentials`
+                        type: string
+                      metadataSheetId:
+                        description: Sheet ID of the spreadsheet, that contains the table mapping
+                        type: string
+                    required:
+                    - credentialsSecret
+                    - metadataSheetId
+                    type: object
                   hive:
                     properties:
                       hdfs:
