--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -1,8 +1,8 @@
 ---
 helm:
-  repo_name: stackable-stable
-  repo_url: https://repo.stackable.tech/repository/helm-stable/
+  repo_name: stackable-dev
+  repo_url: https://repo.stackable.tech/repository/helm-dev/
 versions:
-  commons: 0.4.0
-  secret: 0.6.0
-  trino: 0.8.0
+  commons: 0.5.0-nightly
+  secret: 0.7.0-nightly
+  trino: 0.9.0-nightly
