--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -10,12 +10,12 @@ version = "0.9.0-nightly"
 publish = false
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.25.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.27.0" }
 stackable-trino-crd = { path = "../crd" }
 
 anyhow = "1.0"
 async-trait = "0.1"
-clap = "3.2"
+clap = { version = "4.0", features = ["derive", "cargo", "env"] }
 futures = { version = "0.3", features = ["compat"] }
 indoc = "1.0.7"
 openssl = "0.10.42"
@@ -31,5 +31,5 @@ tracing = "0.1"
 
 [build-dependencies]
 built = { version =  "0.5", features = ["chrono", "git2"] }
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.25.0" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.27.0" }
 stackable-trino-crd = { path = "../crd" }
