--- a/tests/templates/kuttl/ldap/00-install-openldap.yaml
+++ b/tests/templates/kuttl/ldap/00-install-openldap.yaml
@@ -1,85 +1,6 @@
 ---
-apiVersion: secrets.stackable.tech/v1alpha1
-kind: SecretClass
-metadata:
-  name: openldap-tls
-spec:
-  backend:
-    autoTls:
-      ca:
-        autoGenerate: true
-        secret:
-          name: openldap-tls-ca
----
-apiVersion: apps/v1
-kind: StatefulSet
-metadata:
-  name: openldap
-  labels:
-    app.kubernetes.io/name: openldap
-spec:
-  selector:
-    matchLabels:
-      app.kubernetes.io/name: openldap
-  serviceName: openldap
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app.kubernetes.io/name: openldap
-    spec:
-      containers:
-        - name: openldap
-          image: docker.io/bitnami/openldap:2.5
-          env:
-            - name: LDAP_ADMIN_USERNAME
-              value: admin
-            - name: LDAP_ADMIN_PASSWORD
-              value: admin
-            - name: LDAP_ENABLE_TLS
-              value: "yes"
-            - name: LDAP_TLS_CERT_FILE
-              value: /tls/tls.crt
-            - name: LDAP_TLS_KEY_FILE
-              value: /tls/tls.key
-            - name: LDAP_TLS_CA_FILE
-              value: /tls/ca.crt
-          ports:
-            - name: ldap
-              containerPort: 1389
-            - name: tls-ldap
-              containerPort: 1636
-          volumeMounts:
-            - name: tls
-              mountPath: /tls
-          startupProbe:
-            tcpSocket:
-              port: 1389
-          readinessProbe:
-            tcpSocket:
-              port: 1389
-      volumes:
-        - name: tls
-          csi:
-            driver: secrets.stackable.tech
-            volumeAttributes:
-              secrets.stackable.tech/class: openldap-tls
-              secrets.stackable.tech/scope: pod
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: openldap
-  labels:
-    app.kubernetes.io/name: openldap
-spec:
-  type: ClusterIP
-  ports:
-    - name: ldap
-      port: 1389
-      targetPort: ldap
-    - name: tls-ldap
-      port: 1636
-      targetPort: tls-ldap
-  selector:
-    app.kubernetes.io/name: openldap
+apiVersion: kuttl.dev/v1beta1
+kind: TestStep
+commands:
+  # We need to replace $NAMESPACE (by KUTTL) in the install-openldap.yaml
+  - script: eval "echo \"$(cat install-openldap.yaml)\"" | kubectl apply -f -
