Add support for Black Hole connector

--- a/deploy/crd/trinocatalog.crd.yaml
+++ b/deploy/crd/trinocatalog.crd.yaml
@@ -29,6 +29,8 @@ spec:
               connector:
                 oneOf:
                 - required:
+                  - blackHole
+                - required:
                   - googleSheet
                 - required:
                   - hive
@@ -39,6 +41,8 @@ spec:
                 - required:
                   - tpch
                 properties:
+                  blackHole:
+                    type: object
                   googleSheet:
                     properties:
                       cache:
