--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -1201,6 +1201,8 @@ spec:
                 connector:
                   oneOf:
                     - required:
+                        - blackHole
+                    - required:
                         - googleSheet
                     - required:
                         - hive
@@ -1211,6 +1213,8 @@ spec:
                     - required:
                         - tpch
                   properties:
+                    blackHole:
+                      type: object
                     googleSheet:
                       properties:
                         cache:
