removed derby for hive HA in favor of postgresql

--- a/examples/simple-trino-cluster-hive-ha-s3.yaml
+++ b/examples/simple-trino-cluster-hive-ha-s3.yaml
@@ -1,5 +1,7 @@
-# stackablectl operator install commons secret hive zookeeper
+# stackablectl operator install commons secret hive trino
 # helm install minio minio --repo https://charts.bitnami.com/bitnami --set auth.rootUser=minio-access-key --set auth.rootPassword=minio-secret-key
+# helm upgrade hive --install --version=10 --set postgresqlUsername=hive --set postgresqlPassword=hive --set postgresqlDatabase=hive --repo https://charts.bitnami.com/bitnami postgresql
+# PostgreSQL is required for Hive HA to work! Does not work with Derby.
 ---
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
@@ -45,10 +47,10 @@ spec:
         replicas: 2
         config:
           database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
+            connString: jdbc:postgresql://hive-postgresql:5432/hive
+            user: hive
+            password: hive
+            dbType: postgres
   s3:
     reference: minio
 ---
