--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -6,7 +6,9 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: 396-stackable0.2.0
+  image:
+    productVersion: 396
+    stackableVersion: 0.2.0
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
@@ -38,7 +40,9 @@ kind: HiveCluster
 metadata:
   name: simple-hive-derby
 spec:
-  version: 3.1.3-stackable0.2.0
+  image:
+    productVersion: 3.1.3
+    stackableVersion: 0.2.0
   metastore:
     roleGroups:
       default:
