--- a/docs/modules/usage_guide/examples/code/trino-secure-internal-tls.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-secure-internal-tls.yaml
@@ -16,7 +16,9 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  version: 396-stackable0.2.0
+  image:
+    productVersion: 396
+    stackableVersion: 0.2.0
   config:
     internalTls:
       secretClass: trino-internal-tls # <1>
@@ -64,7 +66,9 @@ kind: HiveCluster
 metadata:
   name: simple-hive-derby
 spec:
-  version: 3.1.3-stackable0.2.0
+  image:
+    productVersion: 3.1.3
+    stackableVersion: 0.2.0
   metastore:
     roleGroups:
       default:
