--- a/docs/modules/getting_started/examples/code/trino.yaml
+++ b/docs/modules/getting_started/examples/code/trino.yaml
@@ -5,7 +5,7 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
+    productVersion: "396"
     stackableVersion: 0.3.0
   catalogLabelSelector:
     matchLabels:
