Successfully tested locally.

--- a/tests/templates/kuttl/smoke/06-assert.yaml
+++ b/tests/templates/kuttl/smoke/06-assert.yaml
@@ -6,7 +6,7 @@ timeout: 600
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: hive-postgresql
+  name: postgresql
 status:
   readyReplicas: 1
   replicas: 1
