--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -2,20 +2,20 @@
 dimensions:
   - name: trino
     values:
-      - 377-stackable0.2.0
-      - 387-stackable0.2.0
-      - 395-stackable0.2.0
-      - 396-stackable0.2.0
+      - 377-stackable0.3.0
+      - 387-stackable0.3.0
+      - 395-stackable0.3.0
+      - 396-stackable0.3.0
   - name: trino-latest
     values:
-      - 396-stackable0.2.0
+      - 396-stackable0.3.0
   - name: hive
     values:
       - 2.3.9-stackable0.6.0
       - 3.1.3-stackable0.2.0
   - name: opa
     values:
-      - 0.45.0-stackable0.2.0
+      - 0.45.0-stackable0.3.0
   - name: hdfs
     values:
       - 3.3.4-stackable0.2.0
@@ -53,16 +53,16 @@ tests:
       - s3-use-tls
   - name: tls
     dimensions:
-      - trino
+      - trino-latest
       - use-authentication
       - use-tls
       - use-internal-tls
   - name: resources
     dimensions:
-      - trino
+      - trino-latest
   - name: ldap
     dimensions:
-      - trino
+      - trino-latest
       - ldap-use-tls
   - name: orphaned-resources
     dimensions:
