--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -16,7 +16,7 @@ dimensions:
       - 3.1.3-stackable0.2.0
   - name: opa
     values:
-      - 0.45.0-stackable0.2.0
+      - 0.45.0-stackable0.3.0
   - name: hdfs
     values:
       - 3.3.4-stackable0.2.0
@@ -54,16 +54,16 @@ tests:
       - s3-use-tls
   - name: tls
     dimensions:
-      - trino
+      - trino-latest
       - use-authentication
       - use-tls
       - use-internal-tls
   - name: resources
     dimensions:
-      - trino
+      - trino-latest
   - name: ldap
     dimensions:
-      - trino
+      - trino-latest
       - ldap-use-tls
   - name: orphaned-resources
     dimensions:
