--- a/examples/simple-trino-cluster-hive-ha-s3.yaml
+++ b/examples/simple-trino-cluster-hive-ha-s3.yaml
@@ -45,18 +45,18 @@ spec:
   image:
     productVersion: 3.1.3
     stackableVersion: 0.2.0
+  clusterConfig:
+    database:
+      connString: jdbc:postgresql://hive-postgresql:5432/hive
+      user: hive
+      password: hive
+      dbType: postgres
+    s3:
+      reference: minio
   metastore:
     roleGroups:
       default:
         replicas: 2
-        config:
-          database:
-            connString: jdbc:postgresql://hive-postgresql:5432/hive
-            user: hive
-            password: hive
-            dbType: postgres
-  s3:
-    reference: minio
 ---
 apiVersion: s3.stackable.tech/v1alpha1
 kind: S3Connection
