--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -43,18 +43,18 @@ spec:
   image:
     productVersion: 3.1.3
     stackableVersion: 0.2.0
+  clusterConfig:
+    database:
+      connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+      user: APP
+      password: mine
+      dbType: derby
+    s3:
+      reference: minio
   metastore:
     roleGroups:
       default:
         replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
-  s3:
-    reference: minio
 ---
 apiVersion: s3.stackable.tech/v1alpha1
 kind: S3Connection
