--- a/docs/modules/usage_guide/examples/code/trino-insecure.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-insecure.yaml
@@ -39,13 +39,14 @@ spec:
   image:
     productVersion: 3.1.3
     stackableVersion: 0.2.0
+  clusterConfig:
+    database:
+      connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
+      user: APP
+      password: mine
+      dbType: derby
   metastore:
     roleGroups:
       default:
         replicas: 1
-        config:
-          database:
-            connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
-            user: APP
-            password: mine
-            dbType: derby
+
