--- a/docs/modules/usage_guide/examples/code/trino-file-auth-snippet.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-file-auth-snippet.yaml
@@ -1,4 +1,6 @@
+# yamllint disable-file
 ---
+# tag::secret[]
 apiVersion: v1
 kind: Secret
 metadata:
@@ -8,26 +10,19 @@ stringData:
   admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
   alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
   bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+# end::secret[]
 ---
+# tag::trino[]
 apiVersion: trino.stackable.tech/v1alpha1
 kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  image:
-    productVersion: 396
-    stackableVersion: 0.3.0
-  catalogLabelSelector: {}
+  ...
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
           name: simple-trino-users-secret
-  coordinators:
-    roleGroups:
-      default:
-        replicas: 1
-  workers:
-    roleGroups:
-      default:
-        replicas: 1
+  ...
+# end::trino[]
