--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -9,7 +9,7 @@ version = "0.9.0-nightly"
 publish = false
 
 [dependencies]
-stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "ldap-helper-functions" }
+stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.31.0" }
 
 semver = "1.0"
 serde = { version = "1.0", features = ["derive"] }
