--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -1,8 +1,8 @@
 ---
 helm:
-  repo_name: stackable-dev
-  repo_url: https://repo.stackable.tech/repository/helm-dev/
+  repo_name: stackable-stable
+  repo_url: https://repo.stackable.tech/repository/helm-stable/
 versions:
-  commons: 0.5.0-nightly
-  secret: 0.7.0-nightly
-  trino: 0.9.0-nightly
+  commons: 23.1.0
+  secret: 23.1.0
+  trino: 23.1.0
