--- a/rust/crd/Cargo.toml
+++ b/rust/crd/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "OSL-3.0"
 name = "stackable-trino-crd"
 repository = "https://github.com/stackabletech/trino-operator"
-version = "0.9.0-nightly"
+version = "23.1.0"
 publish = false
 
 [dependencies]
