--- a/rust/operator-binary/Cargo.toml
+++ b/rust/operator-binary/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 license = "OSL-3.0"
 name = "stackable-trino-operator"
 repository = "https://github.com/stackabletech/trino-operator"
-version = "0.9.0-nightly"
+version = "23.1.0"
 publish = false
 
 [dependencies]
