--- a/docs/modules/usage_guide/examples/code/trino-secure-tls-only.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-secure-tls-only.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   image:
     productVersion: 396
-    stackableVersion: 0.3.0
+    stackableVersion: "stackable23.4.0-rc1"
   config:
     tls:
       secretClass: trino-tls # <1>
@@ -54,7 +54,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: 0.2.0
+    stackableVersion: "stackable23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
