--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -2,27 +2,27 @@
 dimensions:
   - name: trino
     values:
-      - 377-stackable0.3.0
-      - 387-stackable0.3.0
-      - 395-stackable0.3.0
-      - 396-stackable0.3.0
-      - 403-stackable0.1.0
+      - 377-stackable23.4.0-rc1
+      - 387-stackable23.4.0-rc1
+      - 395-stackable23.4.0-rc1
+      - 396-stackable23.4.0-rc1
+      - 403-stackable23.4.0-rc1
   - name: trino-latest
     values:
-      - 403-stackable0.1.0
+      - 403-stackable23.4.0-rc1
   - name: hive
     values:
-      - 2.3.9-stackable0.6.0
-      - 3.1.3-stackable0.2.0
+      - 2.3.9-stackable23.4.0-rc1
+      - 3.1.3-stackable23.4.0-rc1
   - name: opa
     values:
-      - 0.45.0-stackable0.3.0
+      - 0.45.0-stackable23.4.0-rc1
   - name: hdfs
     values:
-      - 3.3.4-stackable0.2.0
+      - 3.3.4-stackable23.4.0-rc1
   - name: zookeeper
     values:
-      - 3.8.0-stackable0.8.0
+      - 3.8.0-stackable23.4.0-rc1
   - name: s3-use-tls
     values:
       - "true"
