--- a/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
+++ b/examples/simple-trino-cluster-authentication-opa-authorization-s3.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   image:
     productVersion: 396
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   opa:
     configMapName: simple-opa
     package: trino
@@ -47,7 +47,7 @@ metadata:
 spec:
   image:
     productVersion: 0.45.0
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   servers:
     roleGroups:
       default: {}
@@ -106,7 +106,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
