--- a/examples/simple-trino-cluster-resource-limits.yaml
+++ b/examples/simple-trino-cluster-resource-limits.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   image:
     productVersion: 396
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector: {}
   coordinators:
     roleGroups:
