--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   image:
     productVersion: 396
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
@@ -42,7 +42,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
