--- a/examples/simple-trino-cluster.yaml
+++ b/examples/simple-trino-cluster.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   image:
     productVersion: 396
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
@@ -38,7 +38,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: "stackable23.4.0-rc1"
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
