--- a/examples/simple-trino-cluster-resource-limits.yaml
+++ b/examples/simple-trino-cluster-resource-limits.yaml
@@ -5,12 +5,15 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
+    productVersion: "396"
     stackableVersion: "23.4.0-rc1"
   catalogLabelSelector: {}
   coordinators:
     roleGroups:
       default:
+        configOverrides:
+          config.properties:
+            log.format: "json"
         replicas: 1
   workers:
     roleGroups:
