--- a/examples/simple-trino-cluster-s3.yaml
+++ b/examples/simple-trino-cluster-s3.yaml
@@ -7,7 +7,7 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
+    productVersion: "396"
     stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
