--- a/docs/modules/usage_guide/examples/code/trino-insecure.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-insecure.yaml
@@ -17,8 +17,8 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
-    stackableVersion: 0.3.0
+    productVersion: "396"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
@@ -38,7 +38,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: 0.2.0
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
