--- a/docs/modules/usage_guide/examples/code/trino-secure-internal-tls.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-secure-internal-tls.yaml
@@ -17,8 +17,8 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
-    stackableVersion: 0.3.0
+    productVersion: "396"
+    stackableVersion: "23.4.0-rc1"
   config:
     internalTls:
       secretClass: trino-internal-tls # <1>
@@ -68,7 +68,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: 0.2.0
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
