--- a/examples/simple-trino-cluster-hive-ha-s3.yaml
+++ b/examples/simple-trino-cluster-hive-ha-s3.yaml
@@ -9,8 +9,8 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
-    stackableVersion: 0.3.0
+    productVersion: "396"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector:
     matchLabels:
       trino: simple-trino
@@ -44,7 +44,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: 0.2.0
+    stackableVersion: "23.4.0-rc1"
   clusterConfig:
     database:
       connString: jdbc:postgresql://hive-postgresql:5432/hive
