--- a/examples/simple-trino-cluster-resource-limits.yaml
+++ b/examples/simple-trino-cluster-resource-limits.yaml
@@ -5,8 +5,8 @@ metadata:
   name: simple-trino
 spec:
   image:
-    productVersion: 396
-    stackableVersion: 0.3.0
+    productVersion: "396"
+    stackableVersion: "23.4.0-rc1"
   catalogLabelSelector: {}
   coordinators:
     roleGroups:
