--- a/tests/templates/kuttl/logging/01-assert.yaml
+++ b/tests/templates/kuttl/logging/01-assert.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-timeout: 300
+timeout: 600
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: openldap
+  name: trino-vector-aggregator
 status:
   readyReplicas: 1
   replicas: 1
