--- a/tests/templates/kuttl/ldap/03-assert.yaml
+++ b/tests/templates/kuttl/ldap/03-assert.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-timeout: 600
+timeout: 300
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: zookeeper-server-default
+  name: test-trino
 status:
   readyReplicas: 1
   replicas: 1
