--- a/tests/templates/kuttl/smoke/08-assert.yaml
+++ b/tests/templates/kuttl/smoke/08-assert.yaml
@@ -1,6 +1,12 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-timeout: 300
-commands:
-  - script: kubectl -n $NAMESPACE rollout status daemonset opa-server-default --timeout 300s
+timeout: 900
+---
+apiVersion: apps/v1
+kind: StatefulSet
+metadata:
+  name: hive-metastore-default
+status:
+  readyReplicas: 2
+  replicas: 2
