Docs spike: Distributed component (#371)
This branch demonstrates the changes required to the documentation to move to distributed components.

- `antora.yml`: Remove most settings, set version and name identical to the version and component name in the _documentation_ repository.
- `modules`: There is only a `trino` module now, which is part of the distributed `home` component. The previous modules have been turned into nested directories in the `pages`.

The module `nav.adoc` file now needs to be referred to in the `documentation` repository. 

This PR did not update all the `xrefs`. Since the page structure changed, these need to be updated.

--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,8 +1,3 @@
-name: trino
+---
+name: home
 version: "nightly"
-title: Stackable Operator for Trino
-nav:
-  - modules/getting_started/nav.adoc
-  - modules/ROOT/nav.adoc
-  - modules/usage_guide/nav.adoc
-prerelease: true
