--- a/tests/templates/kuttl/logging/01-assert.yaml
+++ b/tests/templates/kuttl/logging/01-assert.yaml
@@ -10,3 +10,9 @@ metadata:
 status:
   readyReplicas: 1
   replicas: 1
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: trino-vector-aggregator-discovery
+
