--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,3 +2,7 @@
 members = [
     "rust/crd", "rust/operator-binary"
 ]
+
+# [patch."https://github.com/stackabletech/operator-rs.git"]
+# stackable-operator = { path = "/home/sbernauer/stackabletech/operator-rs" }
+# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/affinities" }
