--- a/tests/templates/kuttl/logging/03-assert.yaml
+++ b/tests/templates/kuttl/logging/03-assert.yaml
@@ -6,7 +6,7 @@ timeout: 300
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: openldap
+  name: trino-test-runner
 status:
   readyReplicas: 1
   replicas: 1
