--- a/tests/templates/kuttl/logging/01-assert.yaml
+++ b/tests/templates/kuttl/logging/01-assert.yaml
@@ -6,7 +6,12 @@ timeout: 600
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: postgresql
+  name: trino-vector-aggregator
 status:
   readyReplicas: 1
   replicas: 1
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: trino-vector-aggregator-discovery
