--- a/docs/templating_vars.yaml
+++ b/docs/templating_vars.yaml
@@ -3,6 +3,6 @@ helm:
   repo_name: stackable-dev
   repo_url: https://repo.stackable.tech/repository/helm-dev/
 versions:
-  commons: 0.5.0-nightly
-  secret: 0.7.0-nightly
-  trino: 0.9.0-nightly
+  commons: 0.0.0-dev
+  secret: 0.0.0-dev
+  trino: 0.0.0-dev
