--- a/examples/simple-trino-cluster-resource-limits.yaml
+++ b/examples/simple-trino-cluster-resource-limits.yaml
@@ -7,7 +7,8 @@ spec:
   image:
     productVersion: "396"
     stackableVersion: "23.4.0-rc2"
-  catalogLabelSelector: {}
+  clusterConfig:
+    catalogLabelSelector: {}
   coordinators:
     roleGroups:
       default:
