--- a/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
@@ -19,10 +19,11 @@ metadata:
   name: simple-trino
 spec:
   ...
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          name: simple-trino-users-secret
+  clusterConfig:
+    authentication:
+      method:
+        multiUser:
+          userCredentialsSecret:
+            name: simple-trino-users-secret
   ...
 # end::trino[]
