--- a/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
@@ -19,17 +19,17 @@ spec:
   image:
     productVersion: "396"
     stackableVersion: "23.4.0-rc2"
-  config:
-    internalTls:
-      secretClass: trino-internal-tls # <1>
-  authentication:
-    method:
-      multiUser:
-        userCredentialsSecret:
-          name: trino-users # <2>
-  catalogLabelSelector:
-    matchLabels:
-      trino: simple-trino
+  clusterConfig:
+    tls:
+      internalSecretClass: trino-internal-tls # <1>
+    authentication:
+      method:
+        multiUser:
+          userCredentialsSecret:
+            name: trino-users # <2>
+    catalogLabelSelector:
+      matchLabels:
+        trino: simple-trino
   coordinators:
     roleGroups:
       default:
