openshift changes for smoke tests

--- a/tests/templates/kuttl/smoke/03-assert.yaml
+++ b/tests/templates/kuttl/smoke/03-assert.yaml
@@ -1,12 +1,13 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-timeout: 600
+timeout: 900
 ---
-apiVersion: apps/v1
-kind: StatefulSet
+apiVersion: v1
+kind: Pod
 metadata:
-  name: minio-mc
+  name: minio-client
+  labels:
+    app: minio-client
 status:
-  readyReplicas: 1
-  replicas: 1
+  phase: Running
