--- a/deploy/helm/trino-operator/crds/crds.yaml
+++ b/deploy/helm/trino-operator/crds/crds.yaml
@@ -128,6 +128,10 @@ spec:
                         - external-unstable
                         - external-stable
                       type: string
+                    stopped:
+                      description: Emergency stop button, if `true` then all pods are stopped without affecting configuration (as setting `replicas` to `0` would).
+                      nullable: true
+                      type: boolean
                     tls:
                       default:
                         serverSecretClass: tls
