--- a/tests/templates/kuttl/cluster-operation/40-assert.yaml
+++ b/tests/templates/kuttl/cluster-operation/40-assert.yaml
@@ -1,9 +1,9 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
-metadata:
-  name: install-trino
-timeout: 1200
+timeout: 600
+commands:
+  - script: kubectl -n $NAMESPACE wait --for=condition=available trinoclusters.trino.stackable.tech/trino --timeout 601s
 ---
 apiVersion: apps/v1
 kind: StatefulSet
