--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,5 @@ members = [
     "rust/crd", "rust/operator-binary"
 ]
 
-# [patch."https://github.com/stackabletech/operator-rs.git"]
-# stackable-operator = { path = "/home/sbernauer/stackabletech/operator-rs" }
-# stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feat/affinities" }
+#[patch."https://github.com/stackabletech/operator-rs.git"]
+#stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }
