docs: Default to external-unstable ListenerClass

--- a/docs/modules/trino/examples/getting_started/code/trino.yaml
+++ b/docs/modules/trino/examples/getting_started/code/trino.yaml
@@ -8,6 +8,7 @@ spec:
     productVersion: "396"
     stackableVersion: "23.4.0-rc2"
   clusterConfig:
+    listenerClass: external-unstable
     catalogLabelSelector:
       matchLabels:
         trino: simple-trino
