--- a/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
@@ -20,6 +20,7 @@ spec:
     productVersion: "396"
     stackableVersion: "23.4.0-rc2"
   clusterConfig:
+    listenerClass: external-unstable
     tls:
       internalSecretClass: trino-internal-tls # <1>
     authentication:
