--- a/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-secure-internal-tls.yaml
@@ -18,7 +18,7 @@ metadata:
 spec:
   image:
     productVersion: "396"
-    stackableVersion: "23.4.0-rc2"
+    stackableVersion: "0.0.0-dev"
   clusterConfig:
     tls:
       internalSecretClass: trino-internal-tls # <1>
@@ -68,7 +68,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: "23.4.0-rc1"
+    stackableVersion: "0.0.0-dev"
   clusterConfig:
     database:
       connString: jdbc:derby:;databaseName=/tmp/metastore_db;create=true
