--- a/examples/simple-trino-cluster-hive-ha-s3.yaml
+++ b/examples/simple-trino-cluster-hive-ha-s3.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   image:
     productVersion: "396"
-    stackableVersion: "23.4.0-rc2"
+    stackableVersion: "0.0.0-dev"
   clusterConfig:
     catalogLabelSelector:
       matchLabels:
@@ -45,7 +45,7 @@ metadata:
 spec:
   image:
     productVersion: 3.1.3
-    stackableVersion: "23.4.0-rc1"
+    stackableVersion: "0.0.0-dev"
   clusterConfig:
     database:
       connString: jdbc:postgresql://hive-postgresql:5432/hive
