--- a/deploy/olm/23.4.0/manifests/configmap.yaml
+++ b/deploy/olm/23.4.0/manifests/configmap.yaml
@@ -234,8 +234,8 @@ data:
           asOfVersion: "0.0.0"
 kind: ConfigMap
 metadata:
-  name: superset-operator-configmap
+  name: trino-operator-configmap
   labels:
-    app.kubernetes.io/name: superset-operator
-    app.kubernetes.io/instance: superset-operator
+    app.kubernetes.io/name: trino-operator
+    app.kubernetes.io/instance: trino-operator
     app.kubernetes.io/version: "23.4.0"
