--- a/tests/templates/kuttl/ldap/02-create-ldap-user.yaml
+++ b/tests/templates/kuttl/ldap/02-create-ldap-user.yaml
@@ -4,5 +4,9 @@ kind: TestStep
 metadata:
   name: create-ldap-user
 commands:
+  # openldap
   - script: kubectl cp -n $NAMESPACE ./create_ldap_user.sh openldap-0:/tmp
   - script: kubectl exec -n $NAMESPACE openldap-0 -- sh /tmp/create_ldap_user.sh
+  # openldap-other
+  - script: kubectl cp -n $NAMESPACE ./create_ldap_user_other.sh openldap-other-0:/tmp
+  - script: kubectl exec -n $NAMESPACE openldap-other-0 -- sh /tmp/create_ldap_user_other.sh
