--- a/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
@@ -1,5 +1,17 @@
 # yamllint disable-file
 ---
+# tag::authentication_class[]
+apiVersion: authentication.stackable.tech/v1alpha1
+kind: AuthenticationClass
+metadata:
+  name: simple-trino-file-auth
+spec:
+  provider:
+    static:
+      userCredentialsSecret:
+        name: simple-trino-users-secret
+# end::authentication_class[]
+---
 # tag::secret[]
 apiVersion: v1
 kind: Secret
@@ -7,9 +19,9 @@ metadata:
   name: simple-trino-users-secret
 type: kubernetes.io/opaque
 stringData:
-  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
-  alice: $2y$10$HcCa4k9v2DRrD/g7e5vEz.Bk.1xg00YTEHOZjPX7oK3KqMSt2xT8W
-  bob: $2y$10$xVRXtYZnYuQu66SmruijPO8WHFM/UK5QPHTr.Nzf4JMcZSqt3W.2.
+  admin: admin
+  alice: alice
+  bob: alice
 # end::secret[]
 ---
 # tag::trino[]
@@ -18,12 +30,7 @@ kind: TrinoCluster
 metadata:
   name: simple-trino
 spec:
-  ...
   clusterConfig:
     authentication:
-      method:
-        multiUser:
-          userCredentialsSecret:
-            name: simple-trino-users-secret
-  ...
+      - authenticationClass: simple-trino-file-auth
 # end::trino[]
