fix secret user typo

--- a/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
+++ b/docs/modules/trino/examples/usage_guide/trino-file-auth-snippet.yaml
@@ -21,7 +21,7 @@ type: kubernetes.io/opaque
 stringData:
   admin: admin
   alice: alice
-  bob: alice
+  bob: bob
 # end::secret[]
 ---
 # tag::trino[]
